# observatory

./: .env.example  .git-sensitive-patterns.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  observatory_brief.md  observatory_dashboard.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
deploy/enviro/: PROVISIONING.md
deploy/fstab/: observatory-backup.fstab.template  observatory-tmpfs.fstab
deploy/journald/: observatory.conf
deploy/mosquitto/: README.md  acl.conf  mosquitto.conf  passwords.example
deploy/systemd/: obs-airquality-poll.service  obs-airquality-poll.timer  obs-api.service  obs-aurora-poll.service  obs-aurora-poll.timer  obs-backup-verify.service  obs-backup-verify.timer  obs-backup.service  obs-backup.timer  obs-bgs-poll.service  obs-bgs-poll.timer  obs-blitzortung.service  obs-emsc-poll.service  obs-emsc-poll.timer  obs-enviro-heartbeat.service  obs-enviro-heartbeat.timer  obs-forecast-poll.service  obs-forecast-poll.timer  obs-muon.service  obs-nmdb-poll.service  obs-nmdb-poll.timer  obs-noaa-poll.service  obs-noaa-poll.timer  obs-soak-snapshot.service  obs-soak-snapshot.timer  obs-usgs-poll.service  obs-usgs-poll.timer  obs-vuln-check.service  obs-vuln-check.timer
deploy/udev/: 99-picomuon.rules
dev/mosquitto/: dev.conf
docs/: HARDWARE.md  OPERATIONS.md  SETUP.md
docs/superpowers/plans/: 2026-07-11-dashboard-reorder.md
docs/superpowers/specs/: 2026-07-11-dashboard-reorder-design.md
firmware/indoor-air/: README.md  indoor-air.yaml  secrets.yaml.example
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: Container.svelte  types.ts
frontend/src/routes/: +page.svelte
frontend/static/: CREDITS.txt
frontend/tests/e2e/: a11y.spec.ts  local-quake.spec.ts  noflash.spec.ts  panel-visibility.spec.ts  responsive.spec.ts  settings.spec.ts  smoke.spec.ts  theme.spec.ts
frontend/tests/unit/: AdcSpectrumPanel.test.ts  AirQualityPanel.test.ts  AuroraPanel.test.ts  BarometricPanel.test.ts  CadenceWarningBanner.test.ts  EarthquakeList.test.ts  ForbushPanel.test.ts  ForecastPanel.test.ts  HeaderPanel.test.ts  HealthRow.test.ts  KpBar.test.ts  LightningPanel.test.ts  (+42 more)
migrations/: 0001_initial_schema.sql  0002_poller_runs.sql  0003_weather_unique.sql  0004_earthquakes_is_local.sql  0005_forecast.sql  0006_air_quality.sql  0007_nmdb.sql  0008_alerts.sql  0009_muon_weekly_summary.sql  0010_indoor_air.sql
observatory/: config.py  logging.py
observatory/api/: __main__.py  _baseline.py  _forbush.py  _freshness.py  _pagination.py  _serializers.py  astral_calc.py  db_watcher.py  main.py  middleware.py
observatory/db/: connection.py  migrations.py
observatory/indoor/: __init__.py  subscriber.py  topic.py  writer.py
observatory/muon/: __main__.py  analysis_adapter.py  flux.py  gain_drift.py  parser.py  poisson.py  pressure.py  reader.py
observatory/ops/: __init__.py  enviro_heartbeat.py  vuln_check.py
observatory/pi/: thermal.py
observatory/pollers/: _geo.py  _http.py  _parse_ts.py  _types.py  _write.py
observatory/weather/: __init__.py  derived.py  payload.py  subscriber.py  writer.py
picomuon/: README.md  __init__.py  cli.py  histogram.py  parser.py  pressure.py  rates.py  report.py
scripts/: audit-exif-gps.sh  audit-gitignore-completeness.sh  audit-gitleaks-history.sh  audit-panel-tokens.sh  backup.py  bootstrap-pi.sh  capture-earthquake-fixtures.sh  capture-enviro-payloads.py  capture-phase5-fixtures.sh  check-sensitive.sh  check-weather-gaps.py  deploy-frontend.sh  fake-enviro.py  snapshot-soak.py  soak_audit.py  verify-backup.sh  verify-gitleaks.sh  verify-latest-backup.sh  verify-muon.sh  verify-phase3-software.sh  verify-phase5.sh  verify-phase6.sh  verify-phase7.sh  verify-phase8-audit.sh  verify-phase9-docs.sh  verify-pollers.sh  verify-schema.sh
tests/: conftest.py  test_backup.py  test_bootstrap_script.py  test_config.py  test_deploy_artifacts.py  test_enviro_heartbeat.py  test_migrations_phase16.py  test_precommit_config.py  test_repo_skeleton.py  test_smoke.py  test_vuln_check.py
tests/api/: conftest.py  test_air_quality.py  test_alerts.py  test_astral_calc.py  test_aurora.py  test_baseline.py  test_current.py  test_db_watcher.py  test_earthquakes.py  test_earthquakes_is_local.py  test_events.py  test_forbush.py  test_forbush_logic.py  test_forecast.py  test_freshness.py  test_freshness_cadence.py  test_health.py  test_health_cadence.py  test_health_weather_staleness.py  test_indoor.py  test_ingest.py  test_lan_ip.py  test_lightning.py  test_main_lifespan_weather.py  test_main_smoke.py  test_middleware.py  test_muon.py  test_muon_analysis.py  test_muon_diagnostics.py  test_muon_flux.py  test_nmdb.py  test_pagination.py  test_space_weather.py  test_stats.py  test_weather.py  test_weather_derived.py  test_ws.py
tests/db/: test_connection.py  test_migrations.py
tests/fixtures/: README.md  leak-sample.txt
tests/indoor/: test_subscriber.py  test_topic.py  test_writer.py
tests/integration/: conftest.py  test_db_watcher_to_ws.py  test_mqtt_to_sqlite.py  test_smoke.py  test_verify_phase3_smoke.py
tests/muon/: conftest.py  test_analysis_adapter.py  test_flux.py  test_gain_drift.py  test_main.py  test_parser.py  test_poisson.py  test_pressure.py  test_reader.py  test_smoke.py
tests/pi/: conftest.py  test_thermal.py
tests/picomuon/: conftest.py  test_cli.py  test_histogram.py  test_parser.py  test_pressure.py  test_rates.py
tests/pollers/: conftest.py  test_geo.py  test_http.py  test_parse_ts.py  test_parse_ts_real_samples.py  test_smoke.py  test_systemd_units.py  test_write.py
tests/scripts/: test_check_weather_gaps.py  test_fake_enviro.py  test_snapshot_soak.py  test_soak_audit.py
tests/weather/: conftest.py  test_alert_rules.py  test_derived.py  test_notifier.py  test_payload.py  test_smoke.py  test_subscriber.py  test_writer.py
(+179 files in other folders)
