[project]
name = "observatory"
version = "0.1.0"
description = "Home observatory: Pi 4 + weather + muon + space weather + earthquakes + aurora + dashboard"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "yoyo-migrations>=9.0",
  "structlog>=24.1",
  "pyserial>=3.5",
  "sdnotify>=0.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.9.0",
  "mypy>=1.10",
  "bandit[toml]>=1.8",
  "pip-audit>=2.8",
  "pre-commit>=4.0",
  "types-PyYAML",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.9.0",
  "mypy>=1.10",
  "bandit[toml]>=1.8",
  "pip-audit>=2.8",
  "pre-commit>=4.0",
  "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["observatory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["frontend", "migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["observatory"]
exclude = ["frontend", "migrations", ".venv", "tests/fixtures"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yoyo.*", "serial.*", "sdnotify.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "frontend", ".venv"]
# B101: assert_used — fine in tests, excluded above
# B404: subprocess import — needed by observatory.muon.__main__ for `chronyc tracking` (NTP gate)
# B603: subprocess call without shell — actually safer (no shell injection); we never pass user input
# B607: partial executable path — fine, PATH is controlled by systemd EnvironmentFile on the Pi
skips = ["B101", "B404", "B603", "B607"]
