[project]
name = "observatory"
version = "0.1.0"
description = "Home observatory: Pi 4 + weather + muon + space weather + earthquakes + aurora + dashboard"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "yoyo-migrations>=9.0",
  "structlog>=24.1",
  "pyserial>=3.5",
  "sdnotify>=0.3.2",
  "httpx>=0.27",
  "defusedxml>=0.7",
  "fastapi>=0.133,<0.140",  # >=0.133 drops upper bound on starlette so we can pin >=1.0.1 below
  "starlette>=1.0.1",  # explicit floor to clear PYSEC-2026-161 + CVE-2025-62727 (08-11 SEC-06 audit)
  "uvicorn[standard]>=0.32,<0.40",
  "websockets>=14,<17",
  "astral>=3.0",
  "aiomqtt>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.9.0",
  "mypy>=1.10",
  "bandit[toml]>=1.8",
  "pip-audit>=2.8",
  "pre-commit>=4.0",
  "types-PyYAML",
  "testcontainers[mqtt]>=4.14,<5",
]
analysis = [
  "polars>=1.0",
  "scipy>=1.13",
  "matplotlib>=3.8",
  "typer>=0.12",
]

[project.scripts]
picomuon = "picomuon.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.9.0",
  "mypy>=1.10",
  "bandit[toml]>=1.8",
  "pip-audit>=2.8",
  "pre-commit>=4.0",
  "types-PyYAML",
  "testcontainers[mqtt]>=4.14,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["observatory", "picomuon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers -m 'not network and not integration and not slow'"
asyncio_mode = "auto"
markers = [
  "network: requires live network access (skipped by default; run with -m network -s)",
  "integration: requires Docker (Mosquitto container) and real SQLite; pre-release gate only",
  "slow: long-running tests (>5s); excluded from default fast loop",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["frontend", "migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["observatory", "tests", "scripts", "picomuon"]
exclude = ["frontend", "migrations", ".venv", "tests/fixtures"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "yoyo.*",
    "serial.*",
    "sdnotify.*",
    "defusedxml.*",
    "websockets.*",
    "astral.*",
    "testcontainers.*",
    "polars.*",
    "scipy.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "frontend", ".venv"]
# B101: assert_used — fine in tests, excluded above
# B311: pseudo-random — random.uniform used ONLY for backoff jitter in observatory.pollers._http;
#       not a security/crypto context (jitter spreads thundering-herd, doesn't authenticate anything)
# B404: subprocess import — needed by observatory.muon.__main__ for `chronyc tracking` (NTP gate)
# B603: subprocess call without shell — actually safer (no shell injection); we never pass user input
# B607: partial executable path — fine, PATH is controlled by systemd EnvironmentFile on the Pi
# (B405/B314 NOT skipped — addressed properly via defusedxml in observatory.pollers.bgs)
skips = ["B101", "B311", "B404", "B603", "B607"]
